# DeepLearningProject

./: .gitignore  README.md  pyproject.toml
121-layer/src/: custom_densenet.py  main.ipynb  preprocessing.py  train_densenet.py
chexnet/: 5. Transformers on MNIST.ipynb  ChexnetTrainer.py  DatasetGenerator.py  DensenetModels.py  Main.py  README.md  Transformer_EDA.ipynb  Transformer_Model.ipynb  main.ipynb  pyproject.toml
chexnet/dataset/: test_1.txt
deployment/: streamlit.py
notebooks/: Initial_Transformer_Model.ipynb  Transformer_EDA.ipynb  eda.ipynb  evaluation.ipynb  initial_dense_net.ipynb  torchvision.ipynb  torchvision_vit_patch_16_224.ipynb  trainer.ipynb
notebooks/dnet_arch_expt_runs/custom_dnet_conf_1_14_dropout/: events.out.tfevents.1712751121.DESKTOP-DDUL46F.18872.0
notebooks/dnet_arch_expt_runs/custom_dnet_conf_1_14_modified_layer/: events.out.tfevents.1712786872.DESKTOP-DDUL46F.19180.6
notebooks/dnet_arch_expt_runs/custom_dnet_conf_1_14_modified_layer_v2/: events.out.tfevents.1712790471.DESKTOP-DDUL46F.17548.4
notebooks/dnet_arch_expt_runs/custom_dnet_conf_1_14_original_v5/: events.out.tfevents.1712813560.DESKTOP-DDUL46F.17548.7
notebooks/dnet_arch_expt_runs/custom_dnet_conf_1_2/: events.out.tfevents.1712671324.DESKTOP-DDUL46F.16144.7
notebooks/dnet_runs/: events.out.tfevents.1712612269.DESKTOP-DDUL46F.20492.1  events.out.tfevents.1712612909.DESKTOP-DDUL46F.20492.2
notebooks/runs/custom_dnet_conf_1_14_dropout_modified_layer_v1/: auroc.txt  (+1 more)
notebooks/transformer_expts/: torchvision_maxvit.ipynb  torchvision_vit_patch_32_224.ipynb
(+110 files in other folders)
