[tool.poetry]
name = "chexnet"
version = "0.1.0"
description = ""
authors = ["wangsiyang68 <siyang.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
